[gd_scene load_steps=4 format=3 uid="uid://d1qj27j1k5ts"]

[ext_resource type="Script" uid="uid://d00nlkihn0qke" path="res://scripts/leaderboard_screen.gd" id="1_aanhl"]
[ext_resource type="Theme" uid="uid://dpm7ljvkyy1lv" path="res://default_btn.tres" id="3_gxpd2"]
[ext_resource type="FontFile" uid="uid://c0lsscgf8r2f4" path="res://assets/sprites/RevMiniPixel.ttf" id="4_tt5so"]

[node name="LeaderboardScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_aanhl")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 753.0
offset_top = 842.0
offset_right = 1220.0
offset_bottom = 995.0
theme = ExtResource("3_gxpd2")
text = "VOLTAR
"

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 596.0
offset_top = 630.0
offset_right = 1346.0
offset_bottom = 730.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_tt5so")
theme_override_font_sizes/font_size = 50
text = "ENVIAR"

[node name="CountButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.387
offset_left = 787.0
offset_top = 263.0
offset_right = 1230.0
offset_bottom = 397.52
theme_override_fonts/font = ExtResource("4_tt5so")
theme_override_font_sizes/font_size = 50

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 19.175
anchor_top = 12.625
anchor_right = 35.175
anchor_bottom = 14.1
offset_left = -151.0
offset_top = -5.0
offset_right = -41.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_tt5so")
theme_override_font_sizes/font_size = 50
placeholder_text = "ENTER NAME:"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CountButton" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CountButton" to="." method="_on_count_button_pressed"]
